XO_Project_UAT/Project--XOGrp--UAT/src/objects/Miscellaneous_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Value__c</fullName>
        <label>Miscellaneous Value</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Object_Name__c</fullName>
        <label>Related Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Miscellaneous Setting</label>
    <pluralLabel>Miscellaneous Setting</pluralLabel>
</CustomObject>